added reviews and descriptions to classes
